2004-12-23  Mark Mitchell  <mark@codesourcery.com>

	PR c++/17413
	* pt.c (check_instantiated_args): Remove bogus SFINAE code.

	* cvt.c (convert_to_void): Fix typo in comment.

2004-12-23  Alexandre Oliva  <aoliva@redhat.com>

	PR c++/18962
	* pt.c (check_explicit_specialization): Use the argument list from
	the definition in a template function specialization definition.

2004-12-23  Giovanni Bajo  <giovannibajo@gcc.gnu.org>

	PR c++/18733
	* pt.c (check_explicit_specialization): Use special logic to validate
	befriended specializations.

2004-12-22  Mark Mitchell  <mark@codesourcery.com>

	* rtti.c (emit_support_tinfos): Avoid using C99 semantics.

	PR c++/18464
	* call.c (build_this): In templates, do not bother with
	build_unary_op.
	* typeck.c (unary_complex_lvalue): In a template, always refuse
	simplifications. 

	PR c++/18492
	* cp-gimplify.c (cp_genericize): Relax assertion.

	PR c++/11224
	* cvt.c (convert_to_void): Warn about unused values.

	PR c++/18257
	* rtti.c (emit_support_tinfos): On systems without weak symbols,
	emit the runtime library type-info objects as non-COMDAT. 

2004-12-21  Mark Mitchell  <mark@codesourcery.com>

	PR c++/18378
	* call.c (convert_like_real): Do not permit the use of a copy
	constructor to copy a packed field.

	PR c++/19063
	* decl.c (grokdeclarator): Return error_mark_node, not
	void_type_node, to indicate errors.
	* parser.c (cp_parser_template_parameter_list): Robustify.
	(cp_parser_template_parameter): Likewise.

	PR c++/19034
	* tree.c (cp_tree_equal): Handle OVERLOAD.

2004-12-22  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>

	* decl.c (define_label): Use POP_TIMEVAR_AND_RETURN.
	* name-lookup.c (pushdecl_class_level): Likewise.

2004-12-21  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>

	* name-lookup.c (pushtag): Add missing POP_TIMEVAR_AND_RETURN.

2004-12-21  Andrew Pinski  <pinskia@physics.uc.edu>

	PR c++/18984
	* cp-gimplify.c (cp_genericize_r): Don't insert first but instead